/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */


import org.apache.tools.ant.taskdefs.condition.Os

import java.nio.file.Paths

plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id "com.github.spotbugs"
    id 'java-test-fixtures'
}

version project.version

sourceCompatibility = JavaVersion.VERSION_11

test {
    useJUnitPlatform()
    if (Os.isFamily(Os.FAMILY_MAC)) {
        jvmArgs "-XX:-MaxFDLimit"
    }
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    reports {
        junitXml.setRequired(true)
        def destDir = Paths.get(rootProject.rootDir.absolutePath, "build", "test-results", "server-common").toFile()
        println("Destination directory for server-common tests: ${destDir}")
        junitXml.getOutputLocation().set(destDir)
        html.setRequired(true)
        html.getOutputLocation().set(destDir)
    }
}

dependencies {
    api(project(":client-common"))

    compileOnly('org.jetbrains:annotations:23.0.0')
    compileOnly('com.datastax.cassandra:cassandra-driver-core:3.11.3')
    implementation("org.slf4j:slf4j-api:${project.slf4jVersion}")

    testImplementation "org.junit.jupiter:junit-jupiter-api:${project.junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${project.junitVersion}"
    testImplementation "org.assertj:assertj-core:3.24.2"
    testImplementation "org.mockito:mockito-core:4.10.0"
    testImplementation "org.mockito:mockito-inline:4.10.0"
    testImplementation "com.datastax.cassandra:cassandra-driver-core:3.11.3"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${project.junitVersion}"

    testFixturesImplementation("org.assertj:assertj-core:3.24.2")
}

java {
    withJavadocJar()
    withSourcesJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            groupId rootProject.group
            artifactId "sidecar-${archivesBaseName}"
            version System.getenv("CODE_VERSION") ?: "${version}"
        }
    }
}

compileTestJava {
    // Required for the JmxClientTest which imports sun.rmi.server.UnicastRef
    // and sun.rmi.transport.LiveRef
    options.compilerArgs = [
            '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
            '--add-exports', 'java.rmi/sun.rmi.transport=ALL-UNNAMED'
    ]
}

check.dependsOn(checkstyleMain, checkstyleTest, jacocoTestReport)
